# FreeCAD

./: CMakeLists.txt
src/: CMakeLists.txt
src/App/: XV5Init.py
src/MainXV5/: CMakeLists.txt  MainCmd.cpp  MainGui.cpp  MainPy.cpp  XV5.APS  XV5GuiPy.cpp
src/Mod/: CMakeLists.txt
src/Mod/XV5/: CMakeLists.txt  Init.py  InitGui.py  XV5.dox
src/Mod/XV5/App/: AppXV5.cpp  CMakeLists.txt  PreCompiled.h
src/Mod/XV5/Gui/: AppXV5Gui.cpp  CMakeLists.txt  Command.cpp  CreatePatch.ui  PreCompiled.h  Workbench.cpp  Workbench.h
